ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: car-rental-app.info
      http:
        paths:
          - path: /custom-car-rental
            pathType: Prefix
            backend:
              service:
                name: car-rental-app
                port:
                  number: 8090
          - path: /kubernetes-minikube
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 8080
